#
# Combined Makefile for Linux and OS/X
#
#
# Copyright 2009+ Joachim Glauche
# Copyright 2011 Bas Wijnen <wijnen@debian.org>
#
# This file is part of RepSnapper and is made available under
# the terms of the GNU General Public License, version 2, or at your
# option, any later version, incorporated herein by reference.

SHARED_SRC += \
	src/gcode/gcode.cpp \
	src/gcode/gcodestate.cpp \
	src/gcode/command.cpp

SHARED_INC += \
	src/gcode/gcode.h \
	src/gcode/gcodestate.h \
	src/gcode/command.h
