#
# Combined Makefile for Linux and OS/X
#
#
# Copyright 2009+ Joachim Glauche
# Copyright 2011 Bas Wijnen <wijnen@debian.org>
#
# This file is part of RepSnapper and is made available under
# the terms of the GNU General Public License, version 2, or at your
# option, any later version, incorporated herein by reference.

SHARED_SRC += \
	src/printer/reprap_serial.cpp \
	src/printer/printer.cpp \
	src/printer/printer2.cpp

SHARED_INC += \
	src/printer/reprap_serial.h \
	src/printer/printer.h

