#
# Combined Makefile for Linux and OS/X
#
#
# Copyright 2009+ Joachim Glauche
# Copyright 2011 Bas Wijnen <wijnen@debian.org>
#
# This file is part of RepSnapper and is made available under
# the terms of the GNU General Public License, version 2, or at your
# option, any later version, incorporated herein by reference.

SHARED_SRC += \
	src/printer/printer_serial.cpp \
	src/printer/thread_buffer.cpp \
	src/printer/threaded_printer_serial.cpp \
	src/printer/printer.cpp

SHARED_INC += \
	src/printer/printer_serial.h \
	src/printer/thread_buffer.h \
	src/printer/threaded_printer_serial.h \
	src/printer/printer.h
