#
# Combined Makefile for Linux and OS/X
#
#
# Copyright 2009+ Joachim Glauche
# Copyright 2011 Bas Wijnen <wijnen@debian.org>
#
# This file is part of RepSnapper and is made available under
# the terms of the GNU General Public License, version 2, or at your
# option, any later version, incorporated herein by reference.

SHARED_SRC += \
	src/slicer/draw.cpp \
	src/slicer/gcode.cpp \
	src/slicer/modify.cpp \
	src/slicer/optimize.cpp \
	src/slicer/read.cpp \
	src/slicer/slice.cpp \
	src/slicer/triangle.cpp

SHARED_INC += \
	src/slicer/slicer.h
