#
# Combined Makefile for Linux and OS/X
#
#
# Copyright 2009+ Joachim Glauche
# Copyright 2011 Bas Wijnen <wijnen@debian.org>
#
# This file is part of RepSnapper and is made available under
# the terms of the GNU General Public License, version 2, or at your
# option, any later version, incorporated herein by reference.

SHARED_SRC += \
	src/slicer/infill.cpp \
	src/slicer/poly.cpp \
	src/slicer/layer.cpp \
	src/slicer/cuttingplane.cpp \
	src/slicer/slicer_logick.cpp \
	src/slicer/gcode.cpp \
	src/slicer/triangle.cpp

SHARED_INC += \
	src/slicer/slicer_logick.h \
	src/slicer/gcode.h \
	src/slicer/triangle.h \
	src/slicer/layer.h \
	src/slicer/cuttingplane.h \
	src/slicer/infill.h \
	src/slicer/poly.h
