#
# Combined Makefile for Linux and OS/X
#
#
# Copyright 2009+ Joachim Glauche
# Copyright 2011 Bas Wijnen <wijnen@debian.org>
#
# This file is part of RepSnapper and is made available under
# the terms of the GNU General Public License, version 2, or at your
# option, any later version, incorporated herein by reference.

SHARED_SRC += \
	src/slicer/geometry.cpp \
	src/slicer/printlines.cpp \
	src/slicer/printlines_antiooze.cpp \
	src/slicer/clipping.cpp \
	src/slicer/layer.cpp \
	src/slicer/infill.cpp \
	src/slicer/poly.cpp

SHARED_INC += \
	src/slicer/geometry.h \
	src/slicer/printlines.h \
	src/slicer/clipping.h \
	src/slicer/layer.h \
	src/slicer/infill.h \
	src/slicer/poly.h
