#
# Combined Makefile for Linux and OS/X
#
#
# Copyright 2009+ Joachim Glauche
# Copyright 2011 Bas Wijnen <wijnen@debian.org>
#
# This file is part of RepSnapper and is made available under
# the terms of the GNU General Public License, version 2, or at your
# option, any later version, incorporated herein by reference.

SHARED_SRC += \
	src/ui/view.cpp \
	src/ui/prefs_dlg.cpp \
	src/ui/connectview.cpp \
	src/ui/filechooser.cpp \
	src/ui/progress.cpp

SHARED_INC += \
	src/ui/view.h \
	src/ui/prefs_dlg.h \
	src/ui/connectview.h \
	src/ui/filechooser.h \
	src/ui/progress.h
